resources/2021-11-30-traefik-tailscale-proxy/letsencrypt/02-local/edge/ext-service-traefik.yaml
apiVersion: v1
kind: Service
metadata:
  name: local-traefik
  namespace: traefik-system
spec:
  externalName: traefik.local.10.73.131.194.sslip.io
  type: ExternalName
  ports:
  - port: 443
    name: https
  - port: 80
    name: http
